--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-toast": "^1.2.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "firebase": "^10.13.1",
     "firebase-admin": "^12.4.0",
     "framer-motion": "^11.5.4",
@@ -34,6 +35,7 @@
     "nookies": "^2.5.2",
     "openai": "^4.58.1",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "tailwind-merge": "^2.5.2",
